trunk/Archive2/29/c63ec48e114a6a/output
main.cpp:11:12: error: read-only variable is not assignable
    iter->b++;
    ~~~~~~~^
1 error generated.
